feat: add header

--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -8,7 +8,16 @@ $column-gap: 24;
 $font-size: 16px;
 
 // Colors
-
+$primary: #121212;
+$secondary: #666666;
+$muted: #808080;
+$accent: #FF6428;
+$accent-hover: #FF4F0C;
+$icon-bg: #262626;
+$icon-primary: #B2B2B2;
+$icon-secondary: #A4A4A4;
+$bg-light: #EEEEEE;
+$slider-bullet: #C4C4C4;
 
 // Breakpoints
 $brp-xs: 375px;
