--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -3,3 +3,39 @@
   padding: 0;
   margin: 0;
 }
+
+html, body {
+  height: 100%;
+  min-width: 320px;
+}
+
+a {
+  transition: color .3s ease;
+  text-decoration: none;
+}
+
+.body {
+  font-family: 'Poppins', Helvetica, sans-serif;
+  font-size: $font-size;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1;
+  color: $secondary;
+}
+
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.page {
+  flex: 1 0 auto;
+}
+
+.container {
+  max-width: ($containerWidth + $containerPadding*2) + px;
+  padding: 0 $containerPadding + px;
+  margin: 0 auto;
+}
