--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,8 @@
 @import 'fonts';
 @import 'vars';
 @import 'global';
+@import './blocks/logo';
+@import './blocks/button';
 @import './blocks/header';
-@import './blocks/_footer';
+@import './blocks/menu';
+@import './blocks/footer';
