--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,8 @@
 @import 'global';
 @import './blocks/logo';
 @import './blocks/button';
+@import './blocks/title';
 @import './blocks/header';
 @import './blocks/menu';
+@import './blocks/headline';
 @import './blocks/footer';
