--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,4 +7,5 @@
 @import './blocks/header';
 @import './blocks/menu';
 @import './blocks/headline';
+@import './blocks/offers';
 @import './blocks/footer';
