feat: implement categories section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -8,4 +8,5 @@
 @import './blocks/menu';
 @import './blocks/headline';
 @import './blocks/offers';
+@import './blocks/categories';
 @import './blocks/footer';
