feat: implement brands section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,4 +9,5 @@
 @import './blocks/headline';
 @import './blocks/offers';
 @import './blocks/categories';
+@import './blocks/brands';
 @import './blocks/footer';
