--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,4 +10,5 @@
 @import './blocks/offers';
 @import './blocks/categories';
 @import './blocks/brands';
+@import './blocks/benefits';
 @import './blocks/footer';
