feat: implement feedback section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -11,4 +11,6 @@
 @import './blocks/categories';
 @import './blocks/brands';
 @import './blocks/benefits';
+@import './blocks/feedback';
+@import './blocks/slider';
 @import './blocks/footer';
