feat: implement cta section

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -13,4 +13,5 @@
 @import './blocks/benefits';
 @import './blocks/feedback';
 @import './blocks/slider';
+@import './blocks/cta';
 @import './blocks/footer';
